# queue-management

./: .gitignore  .sonarcloud.properties  CODE_OF_CONDUCT.md  COMPLIANCE.yaml  CONTRIBUTING.md  JenkinsPipeline.yaml  Jenkinsfile  Jenkinsfile.groovy  JenkinsfileOC4  JenkinsfileOriginalSave  JenkinsfileSBC  JenkinsfileSMS.groovy  Jenkinsfile_Neil  Jenkinsfilebasic.groovy  JenkinsfilebasicSMS.groovy  Jenkinsfilezap.groovy  Jenkinswithzap.groovy  Jenkinszapsecret  Profiling.md  README.md  docker-compose.yml  jenkinspipelinezap.groovy  jenkinszap.groovy  newman-forkbomb.sh  owasptest.groovy  run-ab.sh  run-newman-tests.sh  typescript  vetur.config.js  zaptest.groovy
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml  postCreateCommand.sh
.github/: CODEOWNERS
api/: Dockerfile  README.md  config.py  gunicorn_config.py  init.sh  manage.py  package-lock.json  package.json  qsystem.py  requirements.txt  requirements_dev.txt  setup.cfg  setup.py  test.csv  wsgi.py
appointment-frontend/: .env.production  .eslintrc.js  Dockerfile  README.md  babel.config.js  cypress.config.ts  cypress.json  nginx.conf  package-lock.json  (+4 more)
notifications-api/: README.md  config.py  gunicorn_config.py  logging.conf  pytest.xml  requirements.txt  setup.cfg  setup.py
notifications-api/client_secrets/: secrets.json
notifications-api/src/api/: __init__.py
notifications-api/src/api/auth/: auth.py
notifications-api/src/api/resources/: __init__.py  email.py  meta.py  notifications.py  ops.py
notifications-api/src/api/services/email/: __init__.py  email_base_service.py  email_ches_notify.py  email_gc_notify.py
notifications-api/src/api/services/sms/: __init__.py  custom_notify.py  gc_notify.py  sms_base_service.py
(+1315 files in other folders)
